Editing css and html file - fixing bg color of inputs on mobile, adding the bottom footer to the page, fixing mobile bug for top nav menu - 1-8-19

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -215,7 +215,7 @@ TOP NAVIGATION MENU
 .stamp-hamburger-menu {
     cursor: pointer;
     display: inline-block;
-    position: fixed;
+    position: absolute;
     top: 20px;
     right: 20px;
     z-index: 3;  /* needs to be 1 higher than the top navigation menu so it's clickable */
@@ -226,7 +226,7 @@ TOP NAVIGATION MENU
 }
 
 .top-navigation-menu {
-    position: fixed;
+    position: absolute;
     right: 0;
     left: 0;
     z-index: 2;
@@ -264,6 +264,7 @@ TOP NAVIGATION MENU
 
 .stamp-logo a {
     padding-bottom: 10px;
+    letter-spacing: -1px;
 }
 
 @media screen and (min-width: 1000px) {
@@ -346,6 +347,7 @@ button.stamp-input {
 .stamp-signup button {
     background-color: #2c99ec;
     outline: none;
+    font-weight: bold;
 }
 
 /* The following three styles are used to override the default browser placeholder font color. I would normally separate shared styles with commas, but that didn't seem to work in this case. */
@@ -386,6 +388,10 @@ button.stamp-input {
 }
 
 @media screen and (max-width: 767px) {
+    .stamp-form-container {
+        background-color: transparent;
+    }
+
     .sign-up-disclaimer {
         font-size: 1.5em;
     }
@@ -399,9 +405,70 @@ button.stamp-input {
         font-size: 1.6em;
     }
 }
+
 /*==========================================
 FOOTER MENU
 ===========================================*/
+
+.stamp-footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.1);
+    color: white;
+    text-align: center;
+    min-height: 50px;
+}
+
+.stamp-footer .footer-content {
+    position: relative;
+    min-height: 60px;
+}
+
+.stamp-footer .footer-left {
+    position: absolute;
+    left: 50px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.stamp-footer .footer-right {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.footer-item {
+    display: inline-block;
+    margin-right: 35px;
+}
+
+.footer-item a {
+    color: #eeeeee;
+    text-decoration: none;
+    font-size: 2em;
+    line-height: 1.2;
+    padding-bottom: 10px;
+    font-family: "Roboto-Regular";
+    text-transform: uppercase;
+    letter-spacing: 1.8px;
+}
+
+@media screen and (min-width: 768px) {
+    .stamp-footer .footer-left {
+        font-size: 1.3em;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .stamp-footer .footer-left {
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+    }
+}
 
 /*==========================================
 HOVER.CSS
